# libemoji

./: .gitmodules  CMakeLists.txt  build-skia.sh
src/: EgGenerator.cpp  EgGenerator.h
